--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,8 @@ on: [push, pull_request]
 name: Test
 jobs:
   test:
+    env:
+      GOPATH: ${{ runner.workspace }}
     strategy:
       matrix:
         go-version: [1.12.x, 1.13.x]
@@ -14,5 +16,7 @@ jobs:
         go-version: ${{ matrix.go-version }}
     - name: Checkout code
       uses: actions/checkout@v1
+      with:
+        path: ./src/github.com/${{ github.repository }}
     - name: Test
       run: make test
