--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Test
 jobs:
   test:
     env:
-      GOPATH: ${{ runner.workspace }}
+      GOPATH: ${{ github.workspace }}
     strategy:
       matrix:
         go-version: [1.12.x, 1.13.x]
