--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v1
       with:
-        path: ./src/github.com/${{ github.repository }}
+        path: ./gowboy/src/github.com/${{ github.repository }}
     - name: Test
       run: make test
