--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.12.x, 1.13.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
     - name: Install Go
@@ -19,4 +19,6 @@ jobs:
       with:
         path: ./gowboy/src/github.com/${{ github.repository }}
     - name: Test
-      run: make test
+      run: |
+        make lint
+        make test
