--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,6 @@ jobs:
         path: ./gowboy/src/github.com/${{ github.repository }}
     - name: Test
       run: |
+        make install-lint
         make lint
         make test
