:green_heart: fix lint

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,5 @@ jobs:
         path: ./gowboy/src/github.com/${{ github.repository }}
     - name: Test
       run: |
-        make install-lint
-        make lint
+        make ci-lint
         make test
