--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,28 @@
 on: [push, pull_request]
 name: Test
 jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v1
+        with:
+          path: ./gowboy/src/github.com/${{ github.repository }}
+      - name: Lint
+        run: |
+          export PATH=$PATH:$(go env GOPATH)/bin # temporary fix. See https://github.com/actions/setup-go/issues/14
+          go get -u golang.org/x/lint/golint
+          golint ./...
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b . v1.21.0
+          ./golangci-lint run
+
   test:
+    name: Test
     env:
       GOPATH: ${{ github.workspace }}
     strategy:
@@ -10,15 +31,13 @@ jobs:
         platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-    - name: Install Go
-      uses: actions/setup-go@v1
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Checkout code
-      uses: actions/checkout@v1
-      with:
-        path: ./gowboy/src/github.com/${{ github.repository }}
-    - name: Test
-      run: |
-        make ci-lint
-        make test
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v1
+        with:
+          path: ./gowboy/src/github.com/${{ github.repository }}
+      - name: Test
+        run: make test
