--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           path: ./gowboy/src/github.com/${{ github.repository }}
       - name: Test
-        run: make test
+        run: make test-ci
